kubernetes/clusters/my-cluster/kubernetes-native/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  type: LoadBalancer
  selector:
    app: grafana
  ports:
  - port: 3001
    targetPort: 3000
